[gd_scene load_steps=27 format=3 uid="uid://dhkw1kf5clmet"]

[ext_resource type="Script" path="res://Scripts/Behaviours/WaveMover.gd" id="1_xuxm8"]
[ext_resource type="Texture2D" uid="uid://bhj1r4pxuh80p" path="res://Sprites/EndBoat/boat-stopped.png" id="2_ljxal"]
[ext_resource type="Texture2D" uid="uid://sj06dlpi35me" path="res://Sprites/EndBoat/Rowing/boat-rowing1.png" id="3_7vnd2"]
[ext_resource type="Texture2D" uid="uid://dad8x7xabv3ah" path="res://Sprites/EndBoat/Rowing/boat-rowing2.png" id="4_rqbjl"]
[ext_resource type="Texture2D" uid="uid://6ghnpsqgjxe7" path="res://Sprites/EndBoat/Rowing/boat-rowing3.png" id="5_bl1il"]
[ext_resource type="Texture2D" uid="uid://bpnc4hsscq0sn" path="res://Sprites/EndBoat/Rowing/boat-rowing4.png" id="6_y8h57"]
[ext_resource type="Texture2D" uid="uid://b8rrufx05pju" path="res://Sprites/EndBoat/Rowing/boat-rowing5.png" id="7_w8qlk"]
[ext_resource type="Texture2D" uid="uid://s45q5fxf7t6g" path="res://Sprites/EndBoat/Rowing/boat-rowing6.png" id="8_y1c1m"]
[ext_resource type="Texture2D" uid="uid://cdn0qt7qc1kjb" path="res://Sprites/EndBoat/boat-stopped-top.png" id="9_k016w"]
[ext_resource type="Script" path="res://Scripts/Behaviours/CharacterMover.gd" id="10_qrdh3"]
[ext_resource type="Script" path="res://Scripts/Behaviours/CharacterVelocity.gd" id="11_3dstu"]
[ext_resource type="Script" path="res://Scripts/Movement/Calculators/HorizontalMovement.gd" id="12_aek18"]
[ext_resource type="Script" path="res://Scripts/Input/Directions/DirectionalInput.gd" id="13_bubdu"]
[ext_resource type="Script" path="res://Scripts/Thrower.gd" id="14_e5khy"]
[ext_resource type="Script" path="res://Scripts/EndLevel.gd" id="15_p86jc"]
[ext_resource type="Script" path="res://Scripts/SceneChanger.gd" id="16_mxrpl"]
[ext_resource type="Script" path="res://Scripts/Input/Signals/SkipSignal.gd" id="16_o7a7o"]
[ext_resource type="AudioStream" uid="uid://bu16ag1hs0pw" path="res://Audio/gem.wav" id="16_tuqfa"]
[ext_resource type="AudioStream" uid="uid://cvkq6htw81ul5" path="res://Audio/woo.wav" id="17_6i6vg"]

[sub_resource type="Animation" id="Animation_j7v5r"]
resource_name = "RESET"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ljxal")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Sprite2D/Top:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_h2f64"]
resource_name = "rowing"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7, 0.8, 0.9, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("3_7vnd2"), ExtResource("4_rqbjl"), ExtResource("5_bl1il"), ExtResource("6_y8h57"), ExtResource("7_w8qlk"), ExtResource("8_y1c1m")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Sprite2D/Top:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Thrower")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [Vector2(1, 0), true],
"method": &"throw"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pxwn1"]
_data = {
"RESET": SubResource("Animation_j7v5r"),
"rowing": SubResource("Animation_h2f64")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u6hrl"]
size = Vector2(8, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ivsqr"]
size = Vector2(46, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_si1qi"]
size = Vector2(4, 4)

[sub_resource type="Curve" id="Curve_m8e2p"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.870968, 0.197802), 0.883191, 0.883191, 0, 0, Vector2(1, 1), 10.0684, 0.0, 0, 0]
point_count = 3

[node name="EndBoat" type="Node2D"]

[node name="Body" type="CharacterBody2D" parent="." node_paths=PackedStringArray("obj")]
position = Vector2(0, 0.181594)
collision_layer = 0
collision_mask = 0
script = ExtResource("1_xuxm8")
obj = NodePath(".")
amplitude = 5.0
frequency = 0.043
offset = 2.2
speed = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_pxwn1")
}

[node name="Sprite2D" type="Sprite2D" parent="Body"]
z_index = -6
z_as_relative = false
position = Vector2(0, 15)
texture = ExtResource("2_ljxal")
centered = false
offset = Vector2(0, -16)

[node name="Top" type="Sprite2D" parent="Body/Sprite2D"]
z_index = 1
z_as_relative = false
texture = ExtResource("9_k016w")
centered = false
offset = Vector2(0, -16)

[node name="PlayerCollision" type="Area2D" parent="Body"]
z_index = -6
z_as_relative = false
position = Vector2(21, 12)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/PlayerCollision"]
position = Vector2(4, 5)
shape = SubResource("RectangleShape2D_u6hrl")

[node name="Bottom" type="StaticBody2D" parent="Body"]
position = Vector2(0, 16)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Bottom"]
position = Vector2(24, 9)
shape = SubResource("RectangleShape2D_ivsqr")

[node name="LeftWall" type="StaticBody2D" parent="Body"]
position = Vector2(0, 16)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/LeftWall"]
position = Vector2(2, 1)
shape = SubResource("RectangleShape2D_si1qi")

[node name="RightWall" type="StaticBody2D" parent="Body"]
position = Vector2(44, 16)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/RightWall"]
position = Vector2(2, 1)
shape = SubResource("RectangleShape2D_si1qi")

[node name="CharacterMover" type="Node" parent="Body" node_paths=PackedStringArray("body")]
script = ExtResource("10_qrdh3")
body = NodePath("..")

[node name="CharacterVelocity" type="Node" parent="Body" node_paths=PackedStringArray("body", "move")]
script = ExtResource("11_3dstu")
body = NodePath("..")
move = NodePath("HorizontalMovement")

[node name="HorizontalMovement" type="Node" parent="Body/CharacterVelocity" node_paths=PackedStringArray("direction", "body")]
script = ExtResource("12_aek18")
direction = NodePath("DirectionalInput")
body = NodePath("../..")
speed = 30.0
accel = 60.0

[node name="DirectionalInput" type="Node" parent="Body/CharacterVelocity/HorizontalMovement"]
script = ExtResource("13_bubdu")

[node name="Thrower" type="Node" parent="Body" node_paths=PackedStringArray("body")]
script = ExtResource("14_e5khy")
body = NodePath("..")
intensity = 80.0

[node name="EndLevel" type="Node2D" parent="." node_paths=PackedStringArray("boat_anim", "end_jingle", "gem_audio", "woo_audio")]
position = Vector2(64, -26)
script = ExtResource("15_p86jc")
boat_anim = NodePath("../Body/AnimationPlayer")
end_jingle = NodePath("EndJingle")
end_delay = 1.0
gem_delay_min = 0.05
gem_delay_max = 0.6
gem_delay_curve = SubResource("Curve_m8e2p")
gem_audio = NodePath("GemSound")
gem_audio_max_pitch = 1.3
woo_audio = NodePath("WooSound")
wait_after_gems = 1.0
chest_delay = 0.3

[node name="SceneChanger" type="Node" parent="EndLevel"]
script = ExtResource("16_mxrpl")
change_to = "res://Scenes/Areas/lobby.tscn"

[node name="SkipSignal" type="Node" parent="EndLevel"]
script = ExtResource("16_o7a7o")

[node name="EndJingle" type="AudioStreamPlayer2D" parent="EndLevel"]
stream = ExtResource("17_6i6vg")

[node name="GemSound" type="AudioStreamPlayer2D" parent="EndLevel"]
stream = ExtResource("16_tuqfa")

[node name="WooSound" type="AudioStreamPlayer2D" parent="EndLevel"]
stream = ExtResource("17_6i6vg")
volume_db = -6.0

[connection signal="body_entered" from="Body/PlayerCollision" to="EndLevel" method="on_player_entered" unbinds=1]
[connection signal="finished" from="EndLevel" to="EndLevel/SceneChanger" method="change"]
[connection signal="skipped" from="EndLevel/SkipSignal" to="EndLevel" method="on_skipped"]
[connection signal="finished" from="EndLevel/EndJingle" to="EndLevel" method="on_jingle_ended"]
